[workspace]
members = [
  "loki-api",
  "loki-api/generate",
]

[package]
name = "tracing-loki"
description = "A tracing layer for shipping logs to Grafana Loki"
authors = ["hrxi <hrrrxi@gmail.com>"]
repository = "https://github.com/hrxi/tracing-loki"
keywords = ["tracing", "loki"]
version = "0.2.6"
license = "MIT/Apache-2.0"
edition = "2021"

[dependencies]
loki-api = { version = "0.1.0", path = "loki-api" }
reqwest = { version = "0.12.23", default-features = false }
snap = "1.1.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["sync"] }
tracing = "0.1.41"
tracing-core = "0.1.34"
tracing-log = "0.2.0"
tracing-serde = "0.2.0"
tracing-subscriber = "0.3.20"
url = "2.5.7"

[dev-dependencies]
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }

[features]
default = ["compat-0-2-1"]
compat-0-2-1 = []
